--- a/sass/_basics.scss
+++ b/sass/_basics.scss
@@ -30,7 +30,7 @@ html {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-stroke-width: 0.2px;
-
+    scroll-behavior: smooth;
 }
 
 body {
