--- a/sass/_peter.scss
+++ b/sass/_peter.scss
@@ -87,7 +87,7 @@
             margin: 0 auto;
             text-align: center;
             // text-shadow: 1.5px 1.5px 0px rgba(0, 0, 0, 0.5);
-            text-shadow: 0 0 5px rgba(black, 0.75);
+            text-shadow: 0 0 5px rgba(white, 0.25);
 
             @include breakpoint(md) {
                 font-size: 5rem;
