--- a/sass/_peter.scss
+++ b/sass/_peter.scss
@@ -92,6 +92,8 @@
             @include breakpoint(md) {
                 font-size: 5rem;
             }
+
+            display: none;
         }
 
         background-color: rgba(black, 0);
