--- a/sass/_peter.scss
+++ b/sass/_peter.scss
@@ -88,6 +88,9 @@
             text-align: center;
             // text-shadow: 1.5px 1.5px 0px rgba(0, 0, 0, 0.5);
             text-shadow: 0 0 5px rgba(black, 0.5);
+            background-color: white;
+            text-align: center;
+            padding: 5rem;
 
             @include breakpoint(md) {
                 font-size: 5rem;
