--- a/sass/_peter.scss
+++ b/sass/_peter.scss
@@ -87,8 +87,9 @@
             margin: 0 auto;
             text-align: center;
             // text-shadow: 1.5px 1.5px 0px rgba(0, 0, 0, 0.5);
-            text-shadow: 0 0 5px rgba(black, 0.5);
-            background-color: white;
+            // text-shadow: 0 0 5px rgba(black, 0.5);
+            background-color: rgba(white, .75);
+            color: black;
             text-align: center;
             padding: 5rem;
 
