--- a/sass/_peter.scss
+++ b/sass/_peter.scss
@@ -87,11 +87,11 @@
             margin: 0 auto;
             text-align: center;
             // text-shadow: 1.5px 1.5px 0px rgba(0, 0, 0, 0.5);
-            // text-shadow: 0 0 5px rgba(black, 0.5);
-            background-color: rgba(white, .75);
-            color: black;
-            text-align: center;
-            padding: 5rem;
+            text-shadow: 0 0 5px rgba(black, 0.5);
+            // background-color: rgba(white, .75);
+            // color: black;
+            // text-align: center;
+            // padding: 5rem;
 
             @include breakpoint(md) {
                 font-size: 5rem;
@@ -203,7 +203,7 @@
 
                 &:before,
                 &:after {
-                    background-color: rgba(white, .5);
+                    background-color: rgba(white, 0);
                 }
 
                 li {
@@ -214,7 +214,8 @@
 
 
                     &::before {
-                        background-color: rgba(white, .5);
+                        background-color: rgba(white, 0);
+                        margin: .75rem auto;
                     }
 
                     &.is-disabled {
@@ -272,7 +273,7 @@
         height: 100%;
 
         color: white;
-        text-shadow: 1.5px 1.5px 0 rgba(black, 0.5);
+        text-shadow: 0 0 5px rgba(black, 0.5);
 
         // background-color: rgba(#cccccc, 0.25);
 
@@ -283,8 +284,8 @@
         >div {
             text-align: center;
 
-            background-color: rgba(black, 0.75);
-            padding: 5rem;
+            // background-color: rgba(black, 0.75);
+            // padding: 5rem;
         }
 
         h1 {
