--- a/sass/_peter.scss
+++ b/sass/_peter.scss
@@ -300,7 +300,9 @@
         }
 
         h1 {
-            font-size: 5rem;
+            @include breakpoint(md) {
+                font-size: 5rem;
+            }
         }
 
         h5 {
